2006.06.08: David Nichols
	* renamed gethostbyname() -> gethostbyname_long() and gethostbyaddr() ->
	  gethostbyaddr_long() and implemented gethostbybname() and 
	  gethostbyaddr() to just return a single string for the first address
	  and the official hostname, respectively
	* added documentation for new gethostby*() functions

2006.06.07: David Nichols
	* implemented gethostbyname() and gethostbyaddr() functions returning a
	  hash of all hostent information

2006.06.06: David Nichols
	* implemented new command-line options -p,--set-parse-option and -o,
	  --list-parse-options

2006.06.05: David Nichols
	* added tibae_type() function to tibae module, updated serialization to
	  support binary, interval, i*, ui*, r*, time types, added TIBAE_* type
	  constants to "Tibae" namespace for use with the new tibae_type()
	  function

2006.06.04: David Nichols
	* fixed signal handling thread to be a special thread with TID 0, no 
	  longer appears in get_thread_list() or affects num_threads().  Always
	  has TID 0 even after a fork() in both processes

2006.05.31: David Nichols
	* fixed setting chained transaction (sybase) and implicit_transactions
	  (ms sql server) using ct_options on freetds
	* sybase: implemented DBI methods get_client_version and 
	  get_server_version
	* update test/db-test.q to supoprt testing mssql with MS SQL Server

2006.05.30: David Nichols
	* sybase: commit major driver re-org, stored proc execution, multiple
	  select results, bugfixes, more

2006.05.27: David Nichols
	* implemented %no-network and %no-filesystem parse options and
	  --no-network and --nofilesystem command-line options 

2006.05.26: David Nichols
	* mssql: set connection encoding by setting server_charset in the 
	  internal tdslogin structure directly, because freetds has stubs for
	  the ctlib cs_locale functions
	* sybase: set inline message processing to grab error messages and use
	  them in exception text for more descriptive error messages

2006.05.25: David Nichols